--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,15 @@
 {
-  "miniprogramRoot": "./dist",
-  "projectname": "timvel-wx-app",
-  "description": "wx-app",
-  "appid": "wx9512b1cd59230507",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram"
+	"miniprogramRoot": "./dist",
+	"projectname": "timvel-wx-app",
+	"description": "wx-app",
+	"appid": "wx9512b1cd59230507",
+	"setting": {
+		"urlCheck": true,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
+		"newFeature": true
+	},
+	"compileType": "miniprogram",
+	"condition": {}
 }
